fixes v2
added scrollbar in moz firefox

--- a/css/main.css
+++ b/css/main.css
@@ -597,4 +597,6 @@ span {
 
 html {
   scroll-behavior: smooth;
+  overflow-y: scroll;
+  scrollbar-color: grey black;
 }
